--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,17 +1,16 @@
-.para,
-.small-para {
+.para{
   color: hsl(0, 100%, 50%);
-}
-
-.small-para {
-  font-size: 14px;
 }
 
 .para {
   font-size: 22px;
 }
 
-.confirm {
+.small-para {
+  font-size: 14px;
+}
+
+#confirm-button{
   background: green;
   color: white;
   font-weight: bold;
@@ -23,12 +22,11 @@
   font-size: 20px;
 }
 
-.child {
-  color: red;
-  font-size: 14px;
-}
-
 div.text {
   color: green;
   font-size: 22px;
+}
+.text > div {
+  color: red;
+  font-size: 14px;
 }
