--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px ;
+  padding: 0;
+  margin:0;
 }
 
 a {
@@ -23,3 +31,30 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/* .header  {
+  font-family: monospace;
+  background: papayawhip;
+  display: flex;
+}
+
+.logo {
+  font-size: 48px;
+  font-weight: 900;
+  color: tomato;
+  background: white;
+  padding: 4px 32px;
+}
+
+ul {
+  this removes the dots on the list item
+  list-style-type: none;
+}
+
+a {
+  font-size: 22px;
+  background: white;
+  padding: 8px;
+  this removes the line under the links
+  text-decoration: none;
+} */
