--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -21,14 +24,23 @@ body {
   width: 48px;
   height:  48px;
 }
-
 .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 16px;
+}
+.notifications{
+  justify-content: flex-end;
+  padding-right: 16px;
 }
 
+.left, .right{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
 button {
   border: none;
   border-radius: 8px;
@@ -45,4 +57,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
