--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,8 +10,23 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+
 }
 
+.container{
+  display: flex;
+  justify-content: space-between;
+  gap: 52px;
+  margin: auto 32px;
+}
+.element{
+  max-width: 200px;
+  height: auto;
+  text-align: center;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
