--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding:4px;
 }
 
 .icon {
@@ -33,8 +35,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 16px;
 }
-
+.header{
+  font-size: large;
+  font-weight: bold;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -47,10 +53,20 @@ body {
   align-items: center;
   justify-content: center;
 }
-
+.right{
+  margin: 12px;
+  padding: 6px;
+}
+.right-top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 12px;
+}
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin: 4px 0px;
 }
 
 button.continue {
