--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,8 +5,43 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
+.header{
+  display: flex;
+  justify-content: space-between;
 
+}
+.left-links{
+  display: flex;
+  gap: 12px;
+  padding-left: 10px;  
+}
+.right-links{
+  display: flex;
+  gap: 12px;
+  padding-right: 10px;
+}
+.content{
+  justify-content: center;
+  margin: auto auto;
+  align-items: center;
+}
+.input{
+  display: flex;
+  justify-content: center;
+}
+.buttons{
+  display: flex;
+  justify-content: center;
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+  background-color:#eee;
+
+}
 img {
   width: 600px;
 }
@@ -24,4 +59,12 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a{
+  text-decoration: none;
+  color: rgb(112, 112, 112);
+}
+ul{
+  list-style-type: none;
 }
