--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -8,6 +8,11 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
@@ -15,14 +20,39 @@ body {
   background: #eee;
   color: darkmagenta;
 }
-
+.main{
+  display: flex;
+}
 .sidebar {
   width: 300px;
   background: royalblue;
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+  font-size: 24px;
+  padding: 16px;
 }
-
+.card-container{
+  display: flex;
+  flex: 1;
+  padding: 32px;
+  flex-flow: row wrap ;
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin: 10px;
+  max-width: 250px;
+  min-width: 100px;
+
+}
+a{
+  text-decoration: none;
+  color: #eee;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
